# UsingRLtoConstructBT-SeniorThesis

./: README.md
BT-RL_ws/: run.bash  sequence.dot
BT-RL_ws/log/: latest_list
BT-RL_ws/src/: door_transversal.dot  sequence.dot
BT-RL_ws/src/door_traversal/: CMakeLists.txt  package.xml
BT-RL_ws/src/door_traversal/Experiment/: Experiment1.ipynb
BT-RL_ws/src/door_traversal/scripts/: DoorTraversal_env.py  HoldHandle_env.py  MonteCarloGLIE.py  Q_learning.py  hospitalbot_env.py  nStepTD.py  robot_controller.py  start_training.py
BT-RL_ws/src/environment/: behavior_tree.dot  btrees.json  door_transversal.dot  door_transversal.tree  parallel.dot  readdme.txt  root.dot  seq.dot  sequence.dot
BT-RL_ws/src/environment/mm_bt/: CMakeLists.txt  package.xml
BT-RL_ws/src/environment/mm_bt/python/: bt_test.py  test.py
BT-RL_ws/src/environment/mm_bt/scripts/: autonomous_modeV2.py  behaviours_action_simulate.py  behaviours_condition_simulate.py  test_bt_ja.py
BT-RL_ws/src/environment/mm_bt/scripts/BTs/: autonomous_mode.py  behaviors.py  test.py
BT-RL_ws/src/environment/mm_bt/scripts/BTs/bt_node/: behaviors.py  conveyor_kitting.py  notebook_interface.py  py_trees_interface.py
BT-RL_ws/src/environment/mm_bt/src/: my_node.cpp
BT-RL_ws/src/msg_interface/: CMakeLists.txt  package.xml
BT-RL_ws/src/msg_interface/srv/: GenBT.srv
